# warrant

./: .gitignore  ARCHITECT.md  EVIDENCE-PACK.md  LICENSE  PUBLISHING.md  README.md  SPEC.md  pyproject.toml  trust-config.json
.github/workflows/: ci.yml  publish.yml
.warrants/: genesis.json
briefs/: BRIEF-v03-implementation.md
demos/air-canada/: README.md  build.py
demos/air-canada/pack/: manifest.json  trust.json
demos/cross-vendor/: README.md  build.py
demos/cross-vendor/pack/: manifest.json  trust.json
demos/mcp-commerce/: README.md  effects.json  run.sh  shop_server.py
docs/: index.html
examples/: accept.warrant.json  check.sh  conformance-negatives.json  policy.txt  propose.warrant.json  reject.warrant.json
examples/ski/: accept-ski.warrant.json  check.json
impl/: sigma_glyph.py  ski_policy.py  warrant.py  warrant_anchor.py  warrant_mcp.py
impl-go/: README.md  go.mod  main.go  warrant-go
impl-go/.gocache/: trim.txt
impl-go/.gocache/00/: 00223d733c2b3e8e35452ecb3a2054ffee4cb747c99f2df75972c6a9aa03b515-a
impl-go/.gocache/01/: 010abbaad4eaa462826fa7a0938f98db25fef344b95d3dc6c244ac2e17464601-a  011cb14ca6ba0ca434fe5184b50ed2d01dbbd2f1d1707e1828199db664456b5d-a
impl-go/.gocache/02/: 02062cb47419238d394a6e3ea3a968227be8521ee3ce2c0f4d806f8f8e1ffb57-a  027e7618fac5d16660d74ab2671b4eadb8e338ffa4701f930b2450e38a8dd658-a  02b56868d1466b0c6500bf67e963f18ab358a63096e164fedbab8eade64849ec-a
impl-go/.gocache/03/: 032427b329ef3ff3793e1889f2a6ea28ac79e8e4129e8b389edeb36c6d5f2c71-a  034b8a5c8fd3b3d9d91bda0c6efb91574ddad7e3710bfa7b98226064ccfdb976-a  0380374b82670a9129a0bfc9c518081d119726c1a6673bfc882d852f675163f6-a
impl-go/.gocache/04/: 0433bab0f9c9d31ea6116fe4f7dc4fa8fd3342907aa9eaeae0cd11028070f981-a
impl-go/.gocache/05/: 051928298570d54ef01546b662a09e4f772b1044175746c31aaff3efb18f5b15-a  0596b6a19fb1ae378b1c9e83a32bfeab151df79c2a4fee9ca7c527c9cf0c7c75-a
impl-go/.gocache/06/: 062999ba21fc28d5540e51022ddb868c1c50fa7a74951c92f3bba968c718a9bc-a
impl-go/.gocache/08/: 089021533d8e4b86b412f4b1fe2724b17a1c0b69ea776c62d5054cf033b96a99-a  08cc6fe6a54e5b40425c2dc5d98da27ad48f0bb4b7145233ad5766079bf20ff1-a  08ccc5de0dd600c4ad96bc7e2a2b6639efeab8a31753b7c124ba29ad80528a2d-a
impl-go/.gocache/09/: 098fcde90a627693a34131dcbf77894de9812aea627e41da60e5b42105c4b41f-a
impl-go/.gocache/0a/: 0ab8774cc19c1d1c09664fd0c5a6bc1080336d1cfd6a836e4abee7f87bacb7cd-a
impl-go/.gocache/0b/: 0b3850a7a3ec2e2da96d37772b26509531d1a6a3c42579948654021b7cb37362-a
impl-go/.gocache/0c/: 0c79ee501377cbde3f097d4cc9349207f244f9aa9fa4a48c204e6ca0b111502e-a  0c871c4e246e7fb75e9e7e78a4c52934580753990218f1b782d36567d6739fe8-a  0ce52f2488beda433dbcbcb03ccec28aa22d74beea6dcc1ddad839c7f1f5299f-a
impl-go/.gocache/0e/: 0e47549f0764436a55aac4504301e7f806bba3193c9ff86199093ad4fff2d0ed-a  0e4e4d15f59249933d05b521acb7b7c14b32d2472d41b426f777bfa5b9cafffc-a  0e81d3d3e68a0f4454db0be44e8374e9aae66d309e412d204e96b04cee1ac14d-a
impl-rs/: Cargo.toml
impl-rs/src/: ed25519.rs  main.rs
integrations/mcp/: README.md  warrant_mcp.py
proposals/: GOV-001-settlement-at-scale.md
reviews/: 2026-07-antigravity-deep-review-response.md  2026-07-antigravity-deep-review.md  2026-07-codex-gov001-gate.md  2026-07-codex-v0.3-pedantic-audit-response.md  2026-07-codex-v0.3-pedantic-audit.md  2026-07-codex-v0.3-runtime-hardening-audit-response.md  2026-07-deepseek-gov001-gate.md  2026-07-deepseek-gov001-gate.md.pass1  2026-07-gemini-gov001-gate-response.md  2026-07-gptoss120b-agy-audit-response.md  2026-07-gptoss120b-agy-audit.md  2026-07-kimi-full-audit-response.md  2026-07-kimi-k3-spec-review-response.md  2026-07-opus48-v0.2-review.md  2026-07-qwen-web-holistic.md
tests/: agree_check.sh  anchor.py  differential.py  ed25519_differential.py  evidence_pack.py  fuzz_differential.py  hostile.py  mcp_seal.py  negative.py  pedantic_edges.py  settlement.py  ski_policy.py
tests/fixtures/: mock_mcp_server.py
tools/: ai-review.sh  or_review.py
trust/: sigma-glyph-anchor-trust.json
(+436 files in other folders)
