[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "warrant-verify"
version = "0.4.0"
description = "Verify what an AI agent decided — signed, hash-addressed decision records with reasons you can re-run on your own machine."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "s0fractal" }]
keywords = [
    "ai-agents", "agent-provenance", "audit-trail", "eu-ai-act",
    "verifiable", "sigstore", "decision-record", "compliance",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security :: Cryptography",
]
dependencies = ["cryptography>=41"]

[project.urls]
Homepage = "https://github.com/s0fractal/warrant"
Specification = "https://github.com/s0fractal/warrant/blob/master/SPEC.md"
"Evidence Pack format" = "https://github.com/s0fractal/warrant/blob/master/EVIDENCE-PACK.md"

# Two console commands. The distribution is `warrant-verify` (the bare name
# `warrant` is taken on PyPI); the import module and the verifier CLI stay
# `warrant`. `warrant-mcp` is the MCP sealing proxy.
[project.scripts]
warrant = "warrant:main"
warrant-mcp = "warrant_mcp:main"
warrant-anchor = "warrant_anchor:main"

[tool.setuptools]
# Flat modules under impl/: the reference implementation, the bundled Σ-GLYPH
# Book I oracle (so ski@v1 reasons re-run offline, no separate clone), the MCP
# sealing proxy, the ski@v1 policy-predicate authoring library, and the RFC 6962
# Merkle batching/anchoring tool.
py-modules = ["warrant", "sigma_glyph", "warrant_mcp", "ski_policy", "warrant_anchor"]
package-dir = { "" = "impl" }
